fix: referral code on invite + update site metadata

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>SmartListas - Suas lista inteligente de compras de supermercado!!!</title>
+    <meta name="description" content="SmartListas - Suas lista inteligente de compras de supermercado!!!" />
+    <meta name="application-name" content="SmartListas" />
+    <meta property="og:title" content="SmartListas - Suas lista inteligente de compras de supermercado!!!" />
+    <meta property="og:description" content="SmartListas - Suas lista inteligente de compras de supermercado!!!" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="SmartListas" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:title" content="SmartListas - Suas lista inteligente de compras de supermercado!!!" />
+    <meta name="twitter:description" content="SmartListas - Suas lista inteligente de compras de supermercado!!!" />
   </head>
   <body>
     <div id="root"></div>
